--- a/L04/L03/portfolio.css
+++ b/L04/L03/portfolio.css
@@ -1,6 +1,7 @@
 body{margin:0%;
-background-image:url(../L03/pexels-olha-ruskykh-5984612.jpg);} 
- #logo{margin: 40px; margin-left: 15%;
+background-image:url(../L03/pexels-olha-ruskykh-5984612.jpg);
+} 
+ #logo{
 float:left}
  a { font-family: Helvetica;  
     font-size: 30px; 
@@ -21,6 +22,8 @@ float:left}
       { color: white;
         text-decoration: solid ;
     text-decoration: underline;}
+    #active{color: white;
+        text-decoration: solid ;}
 .container{
     width: 800px;
     align-content: center;
@@ -28,37 +31,76 @@ float:left}
     margin: auto;display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
+    
     }
-
- 
-
 .hintergrundbild {background:url("../L03/DSC_1327.JPG") no-repeat center;
     background-size: cover;
     height: 400px;
     width: cover;
     position :relative;}
-h1 {font-family:Helvetica; color: white;
+h1 {font-family:Helvetica; 
+    color: white;
 }
-h2 {font-family:Helvetica;color: white;
+h2 {font-family:Helvetica;
+    color: white;
+}
+.bildchen{width:600px; 
+    height:400px; 
+     display: block; 
+ margin: auto; 
+ 
+
+}
+.bildchenb{
+    width:auto;
+     height:400px; 
+  } 
+    #hochkantbild
+    {width:600px; 
+        height:400px; 
+         display: block; 
+     margin: auto;
+    text-align: center; 
+}
+#vid{width:400px; 
+    height:250px; 
+    display: block; 
+    margin: auto; 
 }
 
-p{ font-family:Helvetica;color: white;
+p{ font-family:Helvetica;
+    color: white;
+    
 }
-#p1{text-align: start;max-width: fit-content;
+#p1{text-align: start;
     font-family: Helvetica, sans-serif;
-    margin: 30px;
+    margin: 10px;
+    margin-right: 10px;
     color: black;
+    width: 200px;
+    border: 5px; 
+    float: left;
+
 }
 #p2{text-align: center;
     font-family: Helvetica, sans-serif;
-    margin: 30px;
-    color: black;}
-#p3{text-align: end;
-    font-family:Helvetica, sans-serif;
-     margin: 30px;
-     color: black;
+    margin: 10px;
+    margin-right: 10px;
+    color: black;
+    width: 300px;
+    border: 5px; 
+    float: left;
 }
+#p3{text-align: end;
+    font-family: Helvetica, sans-serif;
+    margin: 10px;
+    margin-right: 10px;
+    color: black;
+    width: 200px;
+    border: 5px;  
+    float: right;
+}
+
 textarea {
     font-family: Arial, Helvetica, sans-serif;
     width: 150px;
@@ -66,10 +108,11 @@ textarea {
     border-radius:6px; 
     border:2px solid silver;
     outline: none; 
-    margin-width:400px
+ 
  }
  #message{height: 200px; width: 150px;}
-.footer{background-color: #eaeaea; 
-    height: 200px;
+ 
+footer{background-color: #eaeaea; 
+    height: 250px;
     display:flex; justify-content: center
 }
