--- a/L05/portfolio.css
+++ b/L05/portfolio.css
@@ -1,12 +1,26 @@
-body{  text-align: center;
-    margin:0%;
-background-image:url(pexels-olha-ruskykh-5984612.jpg);} 
- #logo{
-    
-    
-float:left}
- a { 
-     font-family: Helvetica;  
+body{margin:0%;
+background-image:url(pexels-olha-ruskykh-5984612.jpg);
+filter: blur(30%);
+}
+ #banner{
+    animation-name: banner;
+    width: 280px;
+    height: 50px;
+    top: 3px;
+    position: fixed;
+    background-color: darkgrey;
+    display: inline-flex;
+    margin-left: 80%;
+    margin-top: 0%;
+    padding-left: 60px;
+    z-index: 99;
+    font-size: 20px;
+}
+ #logo
+ {
+float:left
+}
+ a { font-family: 'Advent Pro', sans-serif; 
     font-size: 30px; 
     font-style:inherit;
     text-align: right ; 
@@ -21,19 +35,12 @@ float:left}
        text-decoration: solid ;
        text-decoration: underline;
       }
-      .active_seite{
-        color: white;
-        text-decoration: solid ;
-        
-       }
-      a:focus { color: white;
-      text-decoration: solid ;
-      text-decoration: underline;
-     }
       a:active  
       { color: white;
         text-decoration: solid ;
     text-decoration: underline;}
+    #active{color: white;
+        text-decoration: solid ;}
 .container{
     width: 800px;
     align-content: center;
@@ -43,74 +50,107 @@ float:left}
     margin-right: auto;
     
     }
-    .bilder-und-video{  display: flex; 
-        justify-content: center; 
-        align-items: center;
-    }
+.hintergrundbild{background:url("DSC_1327.JPG") no-repeat center;
+    background-size: cover;
+    margin-top: 0%;
+    height: 450px;
+    width: cover;
+    position :relative; 
+    filter: grayscale(100%);
+
+    animation-name: slide;
+    animation-duration: 15s;
+   animation-iteration-count: infinite;
+   animation-direction: alternate-reverse;
+   animation-play-state: running;
+   animation-fill-mode: forwards;
+   animation-timing-function: ease-in-out;
+}
+@keyframes slide { 
+0% {background-image: url("DSC_2289.JPG");}
+50%{background-image: url("DSC_1327.JPG");}
+100% {background-image: url("DSC_1628.JPG");}
+
+}
+
+h1 {font-family: 'Advent Pro', sans-serif;;
+    color: white; font-size:75px
+}
+h2 {font-family: 'Advent Pro', sans-serif;;
+    color: white; font-size:35px;
+}
+.bildchen{width:600px; 
+    height:400px; 
+     display: block; 
+ margin: auto; 
  
 
-.hintergrundbild {
-    background:url("DSC_1327.JPG") no-repeat center;
-    background-size: cover;
-    height: 400px;
-    width: cover;
-    position :relative;}
-h1 {text-align: left;
-    font-family:Helvetica; 
-    color: white;
 }
-h2 {font-family:Helvetica;
-    color: white;
+.bildchen:hover{width:700px; 
+    height:480px; 
+     display: block; 
 }
 
-p{ font-family:Helvetica;
-    color: white
+#vid{
+    width:500px; 
+    height:auto; 
+    display: block; 
+    margin: auto; 
+    margin-bottom: 50px;
+}
+
+p{font-family: 'Advent Pro', sans-serif;
+    color: white;
+    font-size: 18px;
+    
 }
 #p1{text-align: start;
-    font-family: Helvetica, sans-serif;
-    margin: 30px;
-    color: black; 
-     width: 250px;
-     height: 105px;
-}
-#p2{
-    font-family: Helvetica, sans-serif;
-    margin: 30px;
-    width: 250px;
+    font-family: 'Advent Pro', sans-serif;
+    margin: 10px;
+    margin-right: 10px;
     color: black;
-text-align: center; 
-height: 105px;
+    width: 200px;
+    border: 5px; 
+    float: left;
+
 }
-#icons{text-align: left;}
+#p2{text-align: center;
+    font-family: 'Advent Pro', sans-serif;
+    margin: 10px;
+    margin-right: 10px;
+    color: black;
+    width: 300px;
+    border: 5px; 
+    float: left;
+}
 #p3{text-align: end;
-    font-family:Helvetica, sans-serif;
-     margin: 30px;
-     color: black;  
-     width: 250px; 
-     height: 105px;
+    font-family: 'Advent Pro', sans-serif;
+    margin: 10px;
+    margin-right: 10px;
+    color: black;
+    width: 200px;
+    border: 5px;  
+    float: right;
 }
-.bilder{
-    width: 600px; 
-    height: 400px;}
- #bilderhoch{
-     width:300px;
-     height:550px}
-     .video{width:400px;height:250px
-    }
+
 textarea {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Advent Pro', sans-serif;
     width: 150px;
     background-color: gray; 
     border-radius:6px; 
     border:2px solid silver;
     outline: none; 
-    width:400px;
+ 
  }
  #message{height: 200px; width: 150px;}
-#footer{background-color: #eaeaea; 
-    height: 200px;
-    display:flex; justify-content: center;
-    align-items: center;
-}
+ 
 footer{background-color: #eaeaea; 
+    height: 250px;
+    display:flex; justify-content: center
+}
+#soclinks{filter: opacity(60%);
+float: center;
+}
+#soclinks:hover{filter: opacity(100%);
+    float: center;
 }
