--- a/L10/stylesheet.css
+++ b/L10/stylesheet.css
@@ -2,10 +2,23 @@
 body{  background: rgb(255, 157, 0)
     box-sizing: border-box;
   }
-  ul {
-    margin: 0;
-    padding: 0;
-  }
+  h1{font-family: Verdana, ;
+  font-size: 50px;}
+  .header {
+    background-color: #ff6207;
+    padding: 30px 40px;
+    color: #ffffff;
+    text-align: center;
+}
+input{    margin: 0;
+  border: none;
+  border-radius: 0;
+  width: 55%;
+  padding: 10px;
+  float: left;
+  font-size: 16px;
+}
+
 #list{}
 
 ul li {
@@ -14,12 +27,17 @@ ul li {
     padding: 12px 8px 12px 40px;
     background: rgb(219, 202, 202);
     font-size: 20px;
-    transition: 0.2s;
+    transition: 0.2s;}
+
+    .fas fa-trash-alt{
+      padding: 12px 16px 12px 16px;}
+
+      /*add task button*/
     .addBtn {
         padding: 15px;
         width: 25%;
-        background: #000;
-        color: #543 ;
+        background: rgb(255, 208, 0);
+        color: rgb(0, 0, 0) ;
         float: left;
         text-align: center;
         font-size: 17px;
