--- a/L10/stylesheet.css
+++ b/L10/stylesheet.css
@@ -1,47 +1,98 @@
+body {
+    background: #ff9d00;
+    font-family: sans-serif;
+    width: 50%;
+    margin: auto;
+}
 
-body{  background: rgb(255, 157, 0)
-    box-sizing: border-box;
-  }
-  h1{font-family: Verdana, ;
-  font-size: 50px;}
-  .header {
-    background-color: #ff6207;
-    padding: 30px 40px;
+h1 {font-family: Verdana, ;   
     color: #ffffff;
     text-align: center;
+    font-size: 70px;
+    margin-top: 30px;
+    text-align: center;
 }
-input{    margin: 0;
-  border: none;
-  border-radius: 0;
-  width: 55%;
-  padding: 10px;
-  float: left;
-  font-size: 16px;
+.rainbow-text {
+    animation-duration: 3.115s;
+   }
+   
+   .rainbow-text {
+    background: linear-gradient(53.13deg,#FFD33D 0,#FB8532 16.02%,#EA4A5A 28.06%,#8A63D2 56.92%,#2188FF 72.93%,#34D058 84%,#FFD33D 100%);
+    background-size: auto;
+    background-clip: border-box;
+    background-clip: text;
+    display: inline-block;
+    color: transparent;
+    text-fill-color: transparent;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    animation: shine 6.28s alternate infinite;
+    animation-duration: 6.28s;
+    background-size: 300%;
+   margin-left: 35%;
+   }
+   
+   @keyframes shine {
+    0% {
+     background-position:200% center
+    }
+    62.8% {
+     background-position:100% center
+    }
+    100% {
+     background-position:200% center
+    }
+   }
+h2 {
+    color: #f1f1f1;
+    text-align: center;
 }
-
-#list{}
-
-ul li {
-    cursor: pointer;
+b {
+    color: #ffee00;
+    text-align: center;
+}
+input[type=text] {
+    font-size: 14px;
+    width: 100%;
+    padding: 14px 18px;
+    margin: auto;
+    color:#ff0f0f;
+    border-width: 2px;
+    border-style: solid;
     position: relative;
-    padding: 12px 8px 12px 40px;
-    background: rgb(219, 202, 202);
+    box-shadow: 0px 0px 1px #ff0f0f;
+  }
+ul {
+    position: relative;
+   
+  }
+li {
+    background-color: #fc6913;
+    padding: 0px 10px;
+    display: inline-flex;
+    margin: 1px 10px;
+    width: 100%;
+    overflow: hidden;
+    box-shadow: 0px 2px 4px #f10b0b;
+    transition: 400ms;
+   
+}
+li p{
+    margin: auto 20px;
+    color: white;
+    font-size: 28px;
+    word-break: break-all;
+}
+li i{
+    padding: 16px 0;
+    color: white;
     font-size: 20px;
-    transition: 0.2s;}
+    cursor:pointer;
+}
 
-    .fas fa-trash-alt{
-      padding: 12px 16px 12px 16px;}
 
-      /*add task button*/
-    .addBtn {
-        padding: 15px;
-        width: 25%;
-        background: rgb(255, 208, 0);
-        color: rgb(0, 0, 0) ;
-        float: left;
-        text-align: center;
-        font-size: 17px;
-        cursor: pointer;
-        transition: 0.2s;
-        
-      }
+
+li:hover {
+    background-color: #ff7300;
+    transform: scale(1.045);
+}
